Prevent AutoscrollForSelection when selecting text in a fixed-position element.

AutoscrollForSelection is triggered when selecting text and dragging mouse out
of the container. However, we don't want selecting text in a fixed-position
element triggers autoscroll otherwhere. Inside findAutoscrollable, when we find
the object is inside a fixed-position element, we should prevent
AutoscrollForSelection from happening.

BUG=655489

Review-Url: https://codereview.chromium.org/2441683002
Cr-Commit-Position: refs/heads/master@{#427146}