third_party/WebKit/Source/core/layout/LayoutBox.cpp
@@ -1009,6 +1009,12 @@ LayoutBox* LayoutBox::findAutoscrollable(LayoutObject* layoutObject) {
   while (
       layoutObject &&
       !(layoutObject->isBox() && toLayoutBox(layoutObject)->canAutoscroll())) {
+    // Do not start autoscroll when the node is inside a fixed-position element.
+    if (layoutObject->isBox() && toLayoutBox(layoutObject)->hasLayer() &&
+        toLayoutBox(layoutObject)->layer()->scrollsWithViewport()) {
+      return nullptr;
+    }
+
     if (!layoutObject->parent() &&
         layoutObject->node() == layoutObject->document() &&
         layoutObject->document().localOwner())
@@ -1017,7 +1023,8 @@ LayoutBox* LayoutBox::findAutoscrollable(LayoutObject* layoutObject) {
       layoutObject = layoutObject->parent();
   }
 
-  return layoutObject && layoutObject->isBox() ? toLayoutBox(layoutObject) : 0;
+  return layoutObject && layoutObject->isBox() ? toLayoutBox(layoutObject)
+                                               : nullptr;
 }
 
 static inline int adjustedScrollDelta(int beginningDelta) {
